# spaCy

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .win-build.yml  CITATION  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  ErrorCode.py  Gitter.apk  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README-MSVC.txt  README.md  README.rst  README_Sentiment_Analysis_spaCy.md  Textcat_conversion.py  Validation_AI.py  appveyor.yml  azure-pipelines.yml  blub.py  bootstrap_python_env.sh  build-Python27.bat  build-constraints.txt  build.py  build.sh  buildbot.json  contributer_agreement.md  dev_setup.py  displacy_serve_demo.py  displacynew.md  fabfile.py  (+26 more)
.azure/: steps.xml  steps.yml
.buildkite/: sdist.yml  train.yml
.github/: Alpha_support_Norwegian bokmål.md  CONTRIBUTOR_AGREEMENT.md  FUNDING.yml  ISSUES.md  ISSUE_TEMPLATE.md  JeanneC.md  PULL_REQUEST_TEMPLATE.md  azure-steps.yml  huwwaters.md  lock.yml  no-response.yml  spacy_universe_alert.py  test_universe_json.py  validate_universe_json.py  wip.yaml
.github/ISSUE_TEMPLATE/: 01_bugs.md  02_docs.md  03_other.md  (+10 more)
.ipynb_checkpoints/: README-checkpoint.md
appveyor/: download.ps1  install.ps1  run_with_env.cmd
contributors/: NSchrading.md  chrisdubois.md  cla.md  cla_template.md  suchow.md  vsolovyov.md
corpora/en/wordnet/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  compile  config.h.in  configure  configure.ac  install-sh
corpora/en/wordnet/dict/: adv.exc  cntlist.rev  frames.vrb  index.adj  lexnames  log.grind.3.0  noun.exc  sentidx.vrb  verb.exc
corpora/en/wordnet/doc/: Makefile  Makefile.am  Makefile.in
corpora/en/wordnet/doc/html/: Makefile  Makefile.am  Makefile.in  binsrch.3WN.html  cntlist.5WN.html  grind.1WN.html  lexnames.5WN.html  morph.3WN.html  morphy.7WN.html  prologdb.5WN.html  senseidx.5WN.html  uniqbeg.7WN.html  wn.1WN.html  wnb.1WN.html  wndb.5WN.html  wngloss.7WN.html  wngroups.7WN.html  wninput.5WN.html  wnintro.1WN.html  wnintro.3WN.html  wnintro.5WN.html  wnintro.7WN.html  wnlicens.7WN.html  wnpkgs.7WN.html  wnsearch.3WN.html  wnstats.7WN.html  wnutil.3WN.html
corpora/en/wordnet/doc/man/: Makefile  Makefile.am  Makefile.in  binsrch.3  cntlist.5  grind.1  lexnames.5  morph.3  morphy.7  prologdb.5  senseidx.5  uniqbeg.7  wn.1  wnb.1  wndb.5  wngloss.7  wngroups.7  wninput.5  wnintro.1  wnintro.3  wnintro.5  wnintro.7  wnlicens.7  wnpkgs.7  wnsearch.3  wnstats.7  wnutil.3
corpora/en/wordnet/doc/pdf/: Makefile  Makefile.am  Makefile.in
corpora/en/wordnet/doc/ps/: Makefile  Makefile.am  Makefile.in  binsrch.3.ps  cntlist.5.ps  grind.1.ps  lexnames.5.ps  morph.3.ps  morphy.7.ps  prologdb.5.ps  senseidx.5.ps  uniqbeg.7.ps  wn.1.ps  wnb.1.ps  wndb.5.ps  wngloss.7.ps  wngroups.7.ps  wninput.5.ps  wnintro.1.ps  wnintro.3.ps  wnintro.5.ps  wnintro.7.ps  wnlicens.7.ps  wnpkgs.7.ps  wnsearch.3.ps  wnstats.7.ps  wnutil.3.ps
corpora/en/wordnet/include/: Makefile  Makefile.am  Makefile.in  wn.h  wn.h~  wngrind.h
corpora/en/wordnet/include/tk/: Makefile  Makefile.am  Makefile.in  tk.h  tkDecls.h
corpora/en/wordnet/lib/: Makefile.am  Makefile.in  binsrch.c  morph.c  search.c  wnglobal.c  wnhelp.c  wnrtl.c  wnutil.c
corpora/en/wordnet/lib/wnres/: Makefile.am  Makefile.in  license.txt  wn.xbm  wnb.man  wngloss.man
corpora/en/wordnet/src/: Makefile.am  Makefile.in  stubs.c  tkAppInit.c  wn.c  wnb
docs/: Makefile  conf.py  index.rst
examples/: README.md  _handler.py  chainer_sentiment.py  deep_learning_keras.py  dependency_patterns.py  get_parse_subregions.py  information_extraction.py  load_from_docbin.py  matcher_example.py  multi_word_matches.py  nn_text_class.py  parallel_parse.py  parallel_tag.py  phrase_matcher.py  pos_tag.py  spacy_dynet_lstm.py  streamlit_spacy.py  train_ner.py  train_ner_standalone.py  train_pos_tagger.py  twitter_filter.py  vectors_fast_text.py  vectors_tensorboard.py  vectors_tensorboard_standalone.py
ext/: murmurhash.cpp  murmurhash.pxd  murmurhash.pyx  sparsehash.cpp  sparsehash.pxd  sparsehash.pyx
include/: MurmurHash2.h
licenses/: 3rd_party_licenses.txt
notebooks/: lightning_tour.ipynb
sandbox_test_sofie/: testing_el.py
services/: displacy.py
spacy/: __init__.py  __main__.py  _align.pyx  _bu_nn.pyx  _cfile.pxd  _cfile.pyx  _hashing.pxd  _hashing.pyx  _matcher2_notes.py  _ml.pxd  _ml.py  _ml.pyx  _morphologizer.pyx  _nn.py  _nn.pyx  _theano.pxd  _theano.pyx  _transitions.pxd  _transitions.pyx  _version.py  about.py  analysis.py  attrs.pxd  attrs.pyx  cfile.pxd  cfile.pyx  cli.json  compat.py  context.pxd  context.pyx  coref_scorer.py  de.pyx  default_config.cfg  default_config_distillation.cfg  default_config_pretraining.cfg  deprecated.py  download.py  en.cpp  en.pxd  en.pyx  (+101 more)
spacy_cli/: __init__.py  build_manifest.py  cli_manifest.json  main.py  static.py
tests/: .test_tokenizer.py.swo  README.md  conftest.py  depr_test_ner.py  prag_sbd.py  sun.tokens  test_add_lemmas.py  test_align.py  test_array.py  test_asciify.py  test_basic_create.py  test_basic_load.py  test_canon_case.py  test_conjuncts.py  test_contractions.py  test_docs.py  test_emoticons.py  test_flag_features.py  test_group_by.py  test_hash_table.py  test_hashing.py  test_infix.py  test_intern.py  test_is_punct.py  test_iter_lexicon.py  test_lemmatizer.py  test_lev_align.py  test_lexeme_flags.py  test_matcher.py  test_merge.py  test_morph_exceptions.py  test_ner.py  test_non_sparse.py  test_number.py  test_only_punct.py  test_onto_ner.py  test_orth.py  test_parse.py  test_parse_navigate.py  test_pickle.py  (+30 more)
website/: .dockerignore  .eslintrc  .gitignore  .prettierrc  404.jade  Dockerfile  Makefile  README.md  UNIVERSE.md  _data.json  _fabfile.py  _harp.json  _layout.jade  announcement.jade  create_code_samples  feed.xml.jade  gatsby-browser.js  gatsby-config.js  gatsby-node.js  index.jade  legal.jade  netlify.toml  next-sitemap.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json  robots.txt.jade  run_jade  styleguide.jade  team.jade  tsconfig.json
(+4000 files in other folders)
