[build-system]
requires = [
    "setuptools",
    "cython>=0.25,<3.0",
    "cymem>=2.0.2,<2.1.0",
    "preshed>=3.0.2,<3.1.0",
    "murmurhash>=0.28.0,<1.1.0",
    "thinc @ git+https://github.com/shadeMe/thinc.git@5f43c2a",
    "pathy",
    "numpy>=1.15.0",
]
build-backend = "setuptools.build_meta"
