[build-system]
requires = [
    "setuptools",
    "cython>=0.25,<3.0",
    "cymem>=2.0.2,<2.1.0",
    "preshed>=3.0.2,<3.1.0",
    "murmurhash>=0.28.0,<1.1.0",
    "thinc>=9.1.0,<9.2.0",
    "numpy>=2.0.0; python_version < '3.9'",
    "numpy>=2.0.0; python_version >= '3.9'",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
