[metadata]
description = Industrial-strength Natural Language Processing (NLP) in Python
url = https://spacy.io
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = false
include_package_data = true
scripts =
    bin/spacy
python_requires = >=3.6
setup_requires =
    wheel
    cython>=0.25
    numpy>=1.15.0
    # We also need our Cython packages here to compile against
    cymem>=2.0.2,<2.1.0
    preshed>=3.0.2,<3.1.0
    murmurhash>=0.28.0,<1.1.0
    thinc==8.0.0a8
install_requires =
    # Our libraries
    murmurhash>=0.28.0,<1.1.0
    cymem>=2.0.2,<2.1.0
    preshed>=3.0.2,<3.1.0
    thinc==8.0.0a9
    blis>=0.4.0,<0.5.0
    wasabi>=0.4.0,<1.1.0
    srsly>=2.0.0,<3.0.0
    catalogue>=0.0.7,<1.1.0
    ml_datasets
    # Third-party dependencies
    tqdm>=4.38.0,<5.0.0
    setuptools
    numpy>=1.15.0
    plac>=0.9.6,<1.2.0
    requests>=2.13.0,<3.0.0
    pydantic>=1.3.0,<2.0.0
    tqdm>=4.38.0,<5.0.0

[options.extras_require]
lookups =
    spacy_lookups_data>=0.0.5,<0.2.0
cuda =
    cupy>=5.0.0b4
cuda80 =
    cupy-cuda80>=5.0.0b4
cuda90 =
    cupy-cuda90>=5.0.0b4
cuda91 =
    cupy-cuda91>=5.0.0b4
cuda92 =
    cupy-cuda92>=5.0.0b4
cuda100 =
    cupy-cuda100>=5.0.0b4
# Language tokenizers with external dependencies
ja =
    fugashi>=0.1.3
ko =
    natto-py==0.9.0
th =
    pythainlp>=2.0

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
    _tokenizer_exceptions_list.py,
    spacy/__init__.py

[tool:pytest]
markers =
    slow
