[metadata]
description = Industrial-strength Natural Language Processing (NLP) in Python
url = https://spacy.io
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
setup_requires =
    wheel
    cython>=0.25
    numpy>=1.15.0
    # We also need our Cython packages here to compile against
    cymem>=2.0.2,<2.1.0
    preshed>=3.0.2,<3.1.0
    murmurhash>=0.28.0,<1.1.0
    thinc>=8.0.0a44,<8.0.0a50
install_requires =
    # Our libraries
    murmurhash>=0.28.0,<1.1.0
    cymem>=2.0.2,<2.1.0
    preshed>=3.0.2,<3.1.0
    thinc>=8.0.0a44,<8.0.0a50
    blis>=0.4.0,<0.8.0
    wasabi>=0.8.0,<1.1.0
    srsly>=2.3.0,<3.0.0
    catalogue>=2.0.1,<2.1.0
    typer>=0.3.0,<0.4.0
    pathy
    # Third-party dependencies
    tqdm>=4.38.0,<5.0.0
    numpy>=1.15.0
    requests>=2.13.0,<3.0.0
    pydantic>=1.5.0,<2.0.0
    pytokenizations
    # Official Python utilities
    setuptools
    packaging>=20.0
    importlib_metadata>=0.20; python_version < "3.8"
    typing_extensions>=3.7.4; python_version < "3.8"

[options.entry_points]
console_scripts =
    spacy = spacy.cli:app

[options.extras_require]
lookups =
    spacy_lookups_data>=1.0.0rc0,<1.0.0
transformers =
    spacy_transformers>=1.0.0a22,<1.0.0
ray =
    spacy_ray>=0.1.0,<1.0.0
cuda =
    cupy>=5.0.0b4,<9.0.0
cuda80 =
    cupy-cuda80>=5.0.0b4,<9.0.0
cuda90 =
    cupy-cuda90>=5.0.0b4,<9.0.0
cuda91 =
    cupy-cuda91>=5.0.0b4,<9.0.0
cuda92 =
    cupy-cuda92>=5.0.0b4,<9.0.0
cuda100 =
    cupy-cuda100>=5.0.0b4,<9.0.0
cuda101 =
    cupy-cuda101>=5.0.0b4,<9.0.0
cuda102 =
    cupy-cuda102>=5.0.0b4,<9.0.0
# Language tokenizers with external dependencies
ja =
    sudachipy>=0.4.9
    sudachidict_core>=20200330
ko =
    natto-py==0.9.0
th =
    pythainlp>=2.0
zh =
    spacy-pkuseg==0.0.26

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
    _tokenizer_exceptions_list.py,

[tool:pytest]
markers =
    slow

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy, thinc.mypy
