psdir = $(prefix)/doc/ps
ps_DATA = binsrch.3.ps cntlist.5.ps grind.1.ps lexnames.5.ps morph.3.ps morphy.7.ps senseidx.5.ps uniqbeg.7.ps wn.1.ps wnb.1.ps wndb.5.ps wngloss.7.ps wngroups.7.ps wninput.5.ps wnintro.1.ps wnintro.3.ps wnintro.5.ps wnintro.7.ps wnlicens.7.ps wnpkgs.7.ps wnsearch.3.ps wnstats.7.ps wnutil.3.ps
